# test_moticon_insoles

./: CMakeLists.txt  demo_human_with_insoles_no_imu.bash  demo_only_insoles.bash  demo_only_insoles_no_imu.bash  human_with_ximus_and_insole.urdf.xacro  human_with_ximus_movable_and_insole.urdf.xacro  insoles_from_file_playback_with_rt_clock.launch  insoles_from_file_playback_with_simulated_clock.launch  package.xml  show_urdf_everything.launch
launch/: demo_only_insoles.launch
test/: check_delay.py  check_delay_external  check_delay_external.py  commander_node.py  republisher.test  simple_commander.py  test_check_delay.py  test_moticon_insole.py
